Improve zip log feature. Improve error popup display